upgrade to commons-collections-3.1, consistently use Boolean.TRUE/FALSE & Type.valueOf() instead of new()
git-svn-id: https://svn.codehaus.org/mule/trunk/mule@881 bf997673-6b11-0410-b953-e057580c5b09